--- a/script.html
+++ b/script.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Best Festival Company Developer Survey</title>
-<hta:application id="APP123080"
-applicationname="Festival Elf Survey"
+<hta:application id="CyberGroupSurvey"
+applicationname="Google CyberGroup"
 icon="logo.ico"
 border="thin"
 caption="yes"
